--- a/1497972144500.plist
+++ b/1497972144500.plist
@@ -1,46 +1,29 @@
-<?xml version=1.0 encoding=UTF-8?> 
-<!DOCTYPE plist PUBLIC -//Apple//DTD PLIST 1.0//EN http://www.apple.com/DTDs/PropertyList-1.0.dtd> 
-<plist version=1.0> 
-<dict> 
-<key>items</key> 
-<array>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
 <dict>
-<key>assets</key>
-<array>
-<dict>
-<key>kind</key>
-<string>software-package</string>
-<key>url</key>
-<string>https://git.oschina.net/tdtkquan/500px/raw/master/1497972144500px.ipa</string>
-</dict>
-<dict>
-<key>kind</key>
-<string>display-image</string>
-<key>needs-shine</key>
-<true/>
-<key>url</key>
-<string>https://git.oschina.net/tdtkquan/500px/raw/master/500px.png</string>
-</dict>
-<dict>
-<key>kind</key>
-<string>full-size-image</string>
-<key>needs-shine</key>
-<true/>
-<key>url</key>
-<string>https://git.oschina.net/tdtkquan/500px/raw/master/500px.png</string>
-</dict>
-</array>
-<key>metadata</key>
-<dict>
-<key>bundle-identifier</key>
-<string>me.500px</string>
-<key>kind</key>
-<string>software</string>
-<key>title</key>
-<string>500px</string>
-</dict>
-</dict>
-</array>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>https://github.com/QuanGe/iioo/blob/master/1497972144500.ipa?raw=true</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>title</key>
+				<string>YouKu</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>bundle-identifier</key>
+				<string>com.youku.YouKu</string>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
-
